fix bug and add land list

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,8 @@
   <!-- bootstrap css -->
 
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJZWeALRjPTmtec1IjK50FaPCmrda02Oc"
-    type="text/javascript"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnxeJ2GRXPxGJh4ooPuvbLVQ7g37F1QSY&libraries=places">
-  </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnxeJ2GRXPxGJh4ooPuvbLVQ7g37F1QSY&callback=initMap"
+  type="text/javascript"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script defer src="https://use.fontawesome.com/releases/v5.9.0/js/all.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.9.0/js/v4-shims.js"></script>
