--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
   <!-- bootstrap css -->
 
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Prompt&display=swap" rel="stylesheet">
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnxeJ2GRXPxGJh4ooPuvbLVQ7g37F1QSY&libraries=places&sensor=false"
   type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script defer src="https://use.fontawesome.com/releases/v5.9.0/js/all.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.9.0/js/v4-shims.js"></script>
